grammar.bnf
ENTRY ::= to monitor STRING CHECKLIST ACTIONS thanks

CHECKLIST ::=
| CHECK
| CHECK then CHECKLIST

CHECK ::=
| check that url STRING has EXPRESSION
| check that command STRING outputs EXPRESSION

EXPRESSION ::=
| REGEXP
| EXPRESSION and EXPRESSION
| LPAREN EXPRESSION RPAREN
| EXPRESSION or EXPRESSION
| not EXPRESSION
| true
| false

ACTIONS ::= FAILURE_CONDITION ACTION_LIST

FAILURE_CONDITION ::=
| on more than INT consecutive (failure|failures)
| on failure

ACTION_LIST ::=
| ACTION then ACTION_LIST
| ACTION

ACTION ::=
| with subject STRING
| mail RECIPIENT_LIST
| echo STRING
| execute STRING

RECIPIENT_LIST ::=
| STRING
| COMPOUND_RECIPIENT_LIST

COMPOUND_RECIPIENT_LIST ::=
| STRING COMMA COMPOUND_RECIPIENT_LIST
| STRING and STRING
